--- a/index.html
+++ b/index.html
@@ -1,54 +1,67 @@
-<!DOCTYPE html>
+<%@ page contentType="text/html;charset=UTF-8" pageEncoding="UTF-8" %>
+
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
-
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Bikesnitch draft : EECS 159A Senior Design 2014-2015">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Bikesnitch draft</title>
-  </head>
-
+ <style>
+#header {
+    background-color:black;
+    color:white;
+    text-align:center;
+    padding:5px;
+}
+#nav {
+    line-height:30px;
+    background-color:#eeeeee;
+    height:300px;
+    width:100px;
+    float:left;
+    padding:5px;	      
+}
+#section {
+    width:350px;
+    float:left;
+    padding:10px;	 	 
+}
+#footer {
+    background-color:black;
+    color:white;
+    clear:both;
+    text-align:center;
+   padding:5px;	 	 
+}
+</style>
+</head>
+  
   <body>
+<div id="header">
+<h1>Bike Snitch</h1>
+</div>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/RMJ93/BikeSnitch_draft">View on GitHub</a>
+<div id="nav">
+<!-- side tabs !-->
+</div>
 
-          <h1 id="project_title">Bikesnitch draft</h1>
-          <h2 id="project_tagline">EECS 159A Senior Design 2014-2015</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/RMJ93/BikeSnitch_draft/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/RMJ93/BikeSnitch_draft/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
-<a id="bike-snitch" class="anchor" href="#bike-snitch" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bike Snitch</h1>
+<div id="section">
+<!--
+<h2>Put Title Header Here</h2>
+!-->
+<!--
+<p>
+London is the capital city of England. It is the most populous city in the United Kingdom,
+with a metropolitan area of over 13 million inhabitants.
+</p>
+<p>
+Standing on the River Thames, London has been a major settlement for two millennia,
+its history going back to its founding by the Romans, who named it Londinium.
+</p>
+!-->
+</div>
 
 <div id="footer">
 A Senior Design Project by Raul Madrigal Jr., Juan Meza, Davis Vang.
 </div>
-      </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Bikesnitch draft maintained by <a href="https://github.com/RMJ93">RMJ93</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
+	
   </body>
+  
 </html>
