--- a/index.html
+++ b/index.html
@@ -42,19 +42,11 @@ Battery Status <br>
 </div>
 
 <div id="section">
-<!--
-<h2>Put Title Header Here</h2>
-!-->
-<!--
+<h2>Hello User, Welcome to BikeSnitch!</h2>
 <p>
-London is the capital city of England. It is the most populous city in the United Kingdom,
-with a metropolitan area of over 13 million inhabitants.
+In order to locate your bike please click on the "Locate Bike" button to the left. If you wish to know how much battery
+BikeSnitch has left, please click on the "battery Status" button to the left.
 </p>
-<p>
-Standing on the River Thames, London has been a major settlement for two millennia,
-its history going back to its founding by the Romans, who named it Londinium.
-</p>
-!-->
 </div>
 
 <div id="footer">
