--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@ Battery Status <br>
 <div id="section">
 <h2>Hello User, Welcome to BikeSnitch!</h2>
 <p>
-In order to locate your bike please click on the "Locate Bike" button to the left. If you wish to know how much battery
+In order to locate your bike please click on the "Locate Bike" button to the left.
+</p>
+<p>
+If you wish to know how much battery
 BikeSnitch has left, please click on the "battery Status" button to the left.
 </p>
 </div>
