--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@ Battery Status <br>
 </div>
 
 <div id="section">
-<h2>Hello User, Welcome to BikeSnitch!</h2>
+<h1>Hello User, Welcome to BikeSnitch!</h1>
+<img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xpf1/t31.0-8/10547852_10202937006976258_3323256318552739983_o.jpg" 
+style="width:500px;height:200px">
 <p>
 In order to locate your bike please click on the "Locate Bike" button to the left.
 </p>
