--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div id="header">
 <h1>Bike Snitch</h1>
 <img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xpf1/t31.0-8/10547852_10202937006976258_3323256318552739983_o.jpg" 
-style="width:350px;height:150px">
+style="width:800px;height:150px">
 </div>
 
 <div id="nav">
@@ -51,6 +51,9 @@ In order to locate your bike please click on the "Locate Bike" button to the lef
 <p>
 If you wish to know how much battery
 BikeSnitch has left, please click on the "battery Status" button to the left.
+</p>
+<p>
+	Thank you for Choosing BikeSnitch!
 </p>
 </div>
 
