--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     padding:5px;	      
 }
 #section {
-    width:350px;
+    width:500px;
     float:left;
     padding:10px;	 	 
 }
@@ -32,9 +32,9 @@
   
   <body>
 <div id="header">
-<h1>Bike Snitch</h1>
+<!--<h1>Bike Snitch</h1>!-->
 <img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xpf1/t31.0-8/10547852_10202937006976258_3323256318552739983_o.jpg" 
-style="width:1000px;height:400px">
+style="width:800px;height:200px">
 </div>
 
 <div id="nav">
