--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <style>
 #header {
-    background-color:black;
+    background-color:blue;
     color:white;
     text-align:center;
     padding:5px;
@@ -34,7 +34,7 @@
 <div id="header">
 <!--<h1>Bike Snitch</h1>!-->
 <img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xpf1/t31.0-8/10547852_10202937006976258_3323256318552739983_o.jpg" 
-style="width:800px;height:200px">
+style="width:800px;height:150px">
 </div>
 
 <div id="nav">
