--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <style>
 #header {
-    background-color:blue;
+    background-color:black;
     color:white;
     text-align:center;
     padding:5px;
@@ -33,7 +33,8 @@
   <body>
 <div id="header">
 <!--<h1>Bike Snitch</h1>!-->
-<img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xpf1/t31.0-8/10547852_10202937006976258_3323256318552739983_o.jpg" 
+<img src=
+"https://lh3.googleusercontent.com/0Xmv9AePMKmZvOer2JoJU6caYH2HiMuzWzrCZA3jetSMegpTgj-C9s2HKe026-wU-xVJZ_2BjyU=w1869-h705" 
 style="width:800px;height:150px">
 </div>
 
