--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <style>
 #header {
-    background-color:black;
+    background-color:green;
     color:white;
     text-align:center;
     padding:5px;
