--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     padding:10px;	 	 
 }
 #footer {
-    background-color:black;
-    color:white;
+    background-color:green;
+    color:black;
     clear:both;
     text-align:center;
    padding:5px;	 	 
@@ -35,7 +35,7 @@
 <!--<h1>Bike Snitch</h1>!-->
 <img src=
 "https://lh3.googleusercontent.com/0Xmv9AePMKmZvOer2JoJU6caYH2HiMuzWzrCZA3jetSMegpTgj-C9s2HKe026-wU-xVJZ_2BjyU=w1869-h705" 
-style="width:800px;height:150px">
+style="width:900px;height:200px">
 </div>
 
 <div id="nav">
