--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
  <style>
 #header {
-    background-color:green;
-    color:white;
+    background-color:white;
     text-align:center;
     padding:5px;
 }
@@ -21,7 +20,7 @@
     padding:10px;	 	 
 }
 #footer {
-    background-color:green;
+    background-color:white;
     color:black;
     clear:both;
     text-align:center;
