--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 }
 #nav {
     line-height:30px;
-    background-color:#eeeeee;
+    background-color:#000000;
+    color:white;
     height:300px;
     width:100px;
     float:left;
