--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 }
 #nav {
     line-height:30px;
-    background-color:#000000;
-    color:white;
+    background-color:#ffffff;
     height:300px;
     width:100px;
     float:left;
@@ -17,6 +16,8 @@
 }
 #section {
     width:500px;
+    background-color:#000000;
+    color:white;
     float:left;
     padding:10px;	 	 
 }
