--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 }
 #nav {
     line-height:30px;
-    background-color:#ffffff;
+    background-color:#eeeeee;
     height:300px;
     width:100px;
     float:left;
@@ -16,8 +16,6 @@
 }
 #section {
     width:500px;
-    background-color:#000000;
-    color:white;
     float:left;
     padding:10px;	 	 
 }
