--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <style>
 #header {
-    background-color:white;
+    background-color:black;
     text-align:center;
     padding:5px;
 }
@@ -20,8 +20,8 @@
     padding:10px;	 	 
 }
 #footer {
-    background-color:white;
-    color:black;
+    background-color:black;
+    color:white;
     clear:both;
     text-align:center;
    padding:5px;	 	 
