--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <style>
 #header {
-    background-color:#66FF99;
+    background-color:#00FFFF;
     text-align:center;
     padding:5px;
 }
