--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <style>
 #header {
-    background-color:#00E6E6;
+    background-color:#0099FF;
     text-align:center;
     padding:5px;
 }
@@ -20,7 +20,7 @@
     padding:10px;	 	 
 }
 #footer {
-    background-color:#00E6E6;
+    background-color:#0099FF;
     color:black;
     clear:both;
     text-align:center;
