--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ style="width:900px;height:200px">
 
 <div id="nav">
 <!-- side tabs !-->
+<button type="button" onclick="alert('hello')">Locate</button>
 Locate Bike <br>
 Battery Status <br>
 </div>
