--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ style="width:900px;height:200px">
 
 <div id="nav">
 <!-- side tabs !-->
-<button type="button" onclick="alert('hello')">Locate</button>
+<button type="button" onclick="alert('hello')">Locate</button> <br>
 Locate Bike <br>
 Battery Status <br>
 </div>
