--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ BikeSnitch has left, please click on the "battery Status" button to the left.
 </div>
 
 <div id="footer">
-A Senior Design Project by Raul Madrigal Jr., Juan Meza, Davis Vang.
+A Senior Design Project by Raul Madrigal Jr., Juan Meza, Davis Vang TEST.
 </div>
 
 	
