--- a/index.html
+++ b/index.html
@@ -1,69 +1,58 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
- <style>
-#header {
-    background-color:#0066FF;
-    text-align:center;
-    padding:5px;
-}
-#nav {
-    line-height:60px;
-    background-color:black;
-    color:white;
-    height:300px;
-    width:100px;
-    float:left;
-    padding:5px;	      
-}
-#section {
-    width:500px;
-    float:left;
-    padding:10px;	 	 
-}
-#footer {
-    background-color:#0066FF;
-    color:black;
-    clear:both;
-    text-align:center;
-   padding:5px;	 	 
-}
-</style>
+	<style>
+		#header {
+		    background-color:#0066FF;
+		    text-align:center;
+		    padding:5px;
+		}
+		#nav {
+		    line-height:60px;
+		    background-color:black;
+		    color:white;
+		    height:300px;
+		    width:100px;
+		    float:left;
+		    padding:5px;	      
+		}
+		#section {
+		    width:500px;
+		    float:left;
+		    padding:10px;	 	 
+		}
+		#footer {
+		    background-color:#0066FF;
+		    color:black;
+		    clear:both;
+		    text-align:center;
+		   padding:5px;	 	 
+		}
+	</style>
 </head>
   
-  <body>
-<div id="header">
-<!--<h1>Bike Snitch</h1>!-->
-<img src=
-"https://d8cf1131-a-0a8b6aca-s-sites.googlegroups.com/a/uci.edu/bikesnitch_pictures/home/BikeSnitch_Logo.png?attachauth=ANoY7co6OV_OP9kh66p6ik3j_pCfQ2D7TXU4-0xymv7kLrDOH7zyj4_r4cepirh1qJqAwZIs7E5wAr9cYNRWAdLlYtfxk3oWc9SyDJzFRTzFjwCw3JqhDhmy6t-H9Wp44aSfvJOaOWDd5jDv0fSFf8OSgg-Dspv3gQXKgE_myLgevJ1ZtsedsLenP1mqKmOFug0Y7c-oWxrvDze47GPk7DSIpiCh5J5jTe0Cv0nBAc-XQ6RJQwOVhCo%3D&attredirects=0" 
-style="width:900px;height:200px">
-</div>
+<body>
+	<div id="header">
+		<!--<h1>Bike Snitch</h1>!-->
+		<img src= "https://d8cf1131-a-0a8b6aca-s-sites.googlegroups.com/a/uci.edu/bikesnitch_pictures/home/BikeSnitch_Logo.png?attachauth=ANoY7co6OV_OP9kh66p6ik3j_pCfQ2D7TXU4-0xymv7kLrDOH7zyj4_r4cepirh1qJqAwZIs7E5wAr9cYNRWAdLlYtfxk3oWc9SyDJzFRTzFjwCw3JqhDhmy6t-H9Wp44aSfvJOaOWDd5jDv0fSFf8OSgg-Dspv3gQXKgE_myLgevJ1ZtsedsLenP1mqKmOFug0Y7c-oWxrvDze47GPk7DSIpiCh5J5jTe0Cv0nBAc-XQ6RJQwOVhCo%3D&attredirects=0" style="width:900px;height:200px">
+	</div>
 
-<div id="nav">
-<!-- side tabs !-->
-<button type="button" onclick="alert('hello')">Locate</button> <br>
-Locate Bike <br>
-Battery Status <br>
-</div>
+	<div id="nav">
+		<!-- side tabs !-->
+		<button type="button" onclick="alert('hello')">Locate</button> <br>
+		Locate Bike <br>
+		Battery Status <br>
+	</div>
 
-<div id="section">
-<h1>Hello User, Welcome to BikeSnitch!</h1>
-<p>
-In order to locate your bike please click on the "Locate Bike" button to the left.
-</p>
-<p>
-If you wish to know how much battery
-BikeSnitch has left, please click on the "battery Status" button to the left.
-</p>
-<p>
-	Thank you for Choosing BikeSnitch!
-</p>
-</div>
+	<div id="section">
+		<h1>Hello User, Welcome to BikeSnitch!</h1>
+		<p>In order to locate your bike please click on the "Locate Bike" button to the left.</p>
+		<p>If you wish to know how much battery BikeSnitch has left, please click on the "battery Status" button to the left. </p>
+		<p> Thank you for Choosing BikeSnitch!</p>
+	</div>
 
-<div id="footer">
-A Senior Design Project by Raul Madrigal Jr., Juan Meza, Davis Vang.
-</div>
-
-	
-  </body>
+	<div id="footer">
+		A Senior Design Project by Raul Madrigal Jr., Juan Meza, Davis Vang.
+	</div>
+</body>
   
 </html>
